<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <Button
        android:id="@+id/prev"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/prev_text"
        app:layout_constraintBottom_toTopOf="@+id/paso"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next_text"
        app:layout_constraintBottom_toTopOf="@+id/paso"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/counter_text_view" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/description_text"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_gap_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--> Imagenes  usar <!-->

    <TextView
        android:id="@+id/paso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_text"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_gap_text"
        app:layout_constraintBottom_toTopOf="@+id/counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/tower1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        app:layout_constraintBottom_toTopOf="@+id/prev"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491"
        app:srcCompat="@drawable/tower" />

    <ImageView
        android:id="@+id/tower2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/tower" />

    <ImageView
        android:id="@+id/tower3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tower" />

    <ImageView
        android:id="@+id/bigDisk1"
        android:layout_width="89dp"
        android:layout_height="17dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower1"
        app:srcCompat="@drawable/big_disk" />

    <ImageView
        android:id="@+id/bigDisk2"
        android:layout_width="89dp"
        android:layout_height="17dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower2"
        android:visibility="invisible"
        app:srcCompat="@drawable/big_disk" />

    <ImageView
        android:id="@+id/bigDisk3"
        android:layout_width="89dp"
        android:layout_height="17dp"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/bigDisk2"
        app:layout_constraintTop_toTopOf="@+id/tower3"
        android:visibility="invisible"
        app:srcCompat="@drawable/big_disk" />

    <ImageView
        android:id="@+id/mediumDisk1"
        android:layout_width="59dp"
        android:layout_height="20dp"
        android:layout_marginStart="63dp"
        app:layout_constraintBottom_toTopOf="@+id/bigDisk1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/medium_disk" />

    <ImageView
        android:id="@+id/mediumDisk2"
        android:layout_width="59dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bigDisk2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower2"
        app:layout_constraintVertical_bias="1.0"
        android:visibility="invisible"
        app:srcCompat="@drawable/medium_disk" />

    <ImageView
        android:id="@+id/mediumDisk3"
        android:layout_width="59dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bigDisk3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower3"
        app:layout_constraintVertical_bias="1.0"
        android:visibility="invisible"
        app:srcCompat="@drawable/medium_disk" />

    <ImageView
        android:id="@+id/smallDisk"
        android:layout_width="47dp"
        android:layout_height="12dp"
        android:layout_marginStart="68dp"
        app:layout_constraintBottom_toTopOf="@+id/mediumDisk1"
        app:layout_constraintEnd_toStartOf="@+id/smallDisk2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower1"
        app:layout_constraintVertical_bias="0.992"

        app:srcCompat="@drawable/small_disk" />

    <ImageView
        android:id="@+id/smallDisk2"
        android:layout_width="47dp"
        android:layout_height="12dp"
        app:layout_constraintBottom_toTopOf="@+id/mediumDisk2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower2"
        app:layout_constraintVertical_bias="1.0"
        android:visibility="invisible"
        app:srcCompat="@drawable/small_disk" />

    <ImageView
        android:id="@+id/smallDisk3"
        android:layout_width="47dp"
        android:layout_height="12dp"
        app:layout_constraintBottom_toTopOf="@+id/mediumDisk3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tower3"
        app:layout_constraintVertical_bias="1.0"
        android:visibility="invisible"
        app:srcCompat="@drawable/small_disk" />


</androidx.constraintlayout.widget.ConstraintLayout>